# adsb-station

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.feeders.yml  docker-compose.observability.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  logging.py  main.py
backend/app/alerts/: __init__.py  rules.py  seed.py  watchlist.py
backend/app/api/: __init__.py  rest.py  ws.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/db/migrations/: README.md  env.py
backend/app/enrichment/: __init__.py  adsblol.py  cache.py  circuit.py  classifier.py  coordinator.py  hexdb.py  opensky.py  planespotters.py  route.py
backend/app/events/: bus.py
backend/app/feeds/: __init__.py  health.py
backend/app/history/: __init__.py  queries.py  writer.py
backend/app/notifications/: __init__.py  cooldown.py  discord.py  dispatcher.py  email.py  formatter.py  quiet_hours.py  telegram.py
backend/app/readsb/: __init__.py  parser.py  poller.py  schema.py  state.py
backend/app/stats/: __init__.py  aggregates.py  live.py
backend/app/telegram_bot/: __init__.py  handlers.py  poller.py
backend/tests/: test_aggregates_max_range.py  test_circuit.py  test_cooldown.py  test_cooldown_override.py  test_formatter.py  test_heatmap_rollup.py  test_high_alt_peak.py  test_operator_classifier.py  test_parser.py  test_quiet_hours.py  test_rules_high_altitude.py  test_rules_reopen.py  test_state.py  test_telegram_bot.py  test_watchlist_notify.py
frontend/: Dockerfile  index.html  (+3 more)
(+101 files in other folders)
